--- a/bamboo-specs/bamboo.yaml
+++ b/bamboo-specs/bamboo.yaml
@@ -1,7 +1,7 @@
 ---
 version: 2
 deployment:
-  name: Bamboo Specs Demo
+  name: Bamboo Specs Demos
   source-plan: GIT-PTS
 release-naming:
   next-version-name: ${bamboo.version_major_number}.${bamboo.buildNumber}
