--- a/bamboo-specs/bamboo.yml
+++ b/bamboo-specs/bamboo.yml
@@ -1,14 +1,29 @@
 ---
 version: 2
-plan:
-  project-key: BAM 
-  key: BAM
-  name: Build the rocket
-stages:
-  - Build hull:
-    - Build
+deployment:
+  name: Bamboo Specs Demos
+  source-plan: GIT-PTS
+release-naming:
+  next-version-name: ${bamboo.version_major_number}.${bamboo.buildNumber}
+environments:
+  - environment: Production
+    description: Deployment plan for the Diary Notes Python Shared Service to production
+    tasks:
+      - type: SCRIPT
+        description: Cutover Blue to Green - Training
+        body: |
+          echo "Hello from Spec !"
 
-Build:
-  tasks:
-    - script:
-      - echo 'Hello World!'
+---
+
+version: 2
+deployment:
+  name: bamboo-spec-demo
+deployment-permissions:
+- users:
+  - bamboo
+  permissions:
+  - view
+  - edit
+  - view_configuration
+
